<resources>
    <string name="app_name">Calculate MVVM</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi">x</string>
    <string name="divine">/</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="clear">AC</string>
    <string name="zero">0</string>
    <string name="six">6</string>
    <string name="fine">5</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="mod">%</string>
</resources>
