<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".view.MainActivity">
    <data>

        <variable
            name="calculatorViewModel"
            type="com.example.calculatemvvm.viewmodels.CalculatorViewModel" />
        <variable
            name="getDataViewModel"
            type="com.example.calculatemvvm.viewmodels.CalculatorViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_kq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="bottom|right"
            android:text="0"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:stretchColumns="0,1,2,3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow>

                <Button
                    android:id="@+id/btn_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:text="@string/mod"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'/>

                <ImageButton
                    android:id="@+id/btn_squareroot"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:src="@drawable/ic_square_root"
                    android:text="@string/eight"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'/>

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button_del"
                    android:text="@string/delete"
                    android:textColor="@color/colorGray"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'/>

                <Button
                    android:id="@+id/btn_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:text="@string/multi"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'/>
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:text="@string/seven"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'/>

                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/btn_divine"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/divine" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/four" />

                <Button
                    android:id="@+id/btn_fine"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/fine" />

                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/six" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:background="@drawable/circle_button"
                    android:text="@string/add" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/one" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/two" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/three" />

                <Button
                    android:id="@+id/btn_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/sub" />
            </TableRow>


            <TableRow>

                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:layout_span="2"
                    android:background="@drawable/circle_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/btn_ac"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:background="@drawable/circle_button_ac"
                    android:text="@string/clear"
                    android:textColor="#FFFFFF"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:textColorLink="#00FFFFFF" />

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_button"
                    android:onClick='@{(view) -> calculatorViewModel.onClick(view)}'
                    android:background="@drawable/circle_button"
                    android:text="@string/equal" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>